recursion.cons.occurrences.Occurrences.scala.error
Compilation error:
Occurrences:4: error: type mismatch;
 found   : Boolean(false)
 required: Int
    return false
           ^Occurrences:7: error: not found: value occurences
    return occurences(l.tail,v)
           ^Occurrences:9: error: not found: value occurences
    return 1+occurences(l.tail,v)
             ^